--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ main {
 
 .card {
     width: 300px;
-    height: 530px;
+    /* height: 530px; */
     margin-right: 20px;
     margin-left: 20px;
     background-color: #F3F3F3;
@@ -35,12 +35,19 @@ main {
     display: inline-block;
 }
 
+.fondos {
+    width: 300px;
+    height: 194px;
+}
+
 .foto-perfil {
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: absolute;
-    left: 43px;
-    top: 65px;
+    left: 80px;
+    top: 130px;
 }
 
 .fav {
@@ -54,6 +61,13 @@ main {
     padding: 20px;
     text-align: center;
 }
+
+/* .FAB {
+    background-color: #00669F;
+    color: white;
+    font-size: 40px;
+    border-radius: 80%;
+} */
 
 h2 {
     margin-bottom: 10px;
@@ -72,4 +86,22 @@ footer {
     color: white;
     padding: 10px;
     margin-top: 100px;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (min-width: 768px) and (max-width: 1400px) {
+    .card {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        margin-bottom: 30px;
+    }
+
+    #no-mobile {
+        display: none;
+    }
 }
